--- a/app/index9.html
+++ b/app/index9.html
@@ -6,19 +6,21 @@
 	</head>
 	<body ng-controller="MainController">
 		<div class="container">
-			<a href="index5.html">< Précédent</a>
-			<a href="index7.html">Suivant ></a>
+			<a href="index8.html">< Précédent</a>
+			<a href="index10.html">Suivant ></a>
 		</div>
-		<h2>Exemple 6</h2>
+		<h2>Exemple 9</h2>
 		<div class="container" ng-cloak>
 			<form ng-submit="addPerson(newFriend)" novalidate>
 				<label for="new-friend">Mon nouvel ami :</label>
 				<input id="new-friend" type="text" ng-model="newFriend">
 				<button type="submit">Ajouter !</button>
 			</form>
+			<label for="friend-filter">Filtrer :</label>
+			<input id="friend-filter" type="text" ng-model="friendFilter">
 			<p>Mes amis sont :</p>
 			<ul>
-				<li ng-repeat="person in people">{{person.firstname}} 
+				<li ng-repeat="person in people | orderBy:'firstname' | filter:friendFilter">{{person.firstname}} 
 					<button type="button" ng-click="removePerson($index)">Supprimer</button>
 				</li>
 			</ul>
