--- a/app/index10.html
+++ b/app/index10.html
@@ -8,7 +8,7 @@
 	<body ng-controller="MainController">
 		<div class="container">
 			<a href="index9.html">< Précédent</a>
-			<!-- <a href="index11.html">Suivant ></a> -->
+			<a href="index11.html">Suivant ></a>
 		</div>
 		<div class="container" ng-cloak>
 			<h2>Exemple 10</h2>
