--- a/app/index14.html
+++ b/app/index14.html
@@ -4,30 +4,24 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Ng-Training Start</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="stylesheet" href="styles15.css">
+		<link rel="stylesheet" href="styles14.css">
 	</head>
 	<body ng-controller="MainController">
-		<div class="main-container container">
-			<div class="container">
-				<a href="index16.html">< Précédent</a>
-				<!-- <a href="index16.html">Suivant ></a> -->
-			</div>
-			<div class="container">
-				<h2>Exemple 17</h2>
-				<div class="row">
-					<div class="emphasize col-md-7" ui-view="list"></div>
-					<div class="emphasize col-md-5" ui-view="details"></div>
-				</div>
-			</div>
+		<div class="container">
+			<a href="index13.html">< Précédent</a>
+			<a href="index15.html">Suivant ></a>
+		</div>
+		<div class="container">
+			<h2>Exemple 14</h2>
+			<ng-view></ng-view>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="angular.min.js"></script>
-		<script src="angular-ui-router.min.js"></script>
+		<script src="angular-route.min.js"></script>
 		<script src="angular-resource.min.js"></script>
-		<script src="person.js"></script>
 		<script src="people.js"></script>
 		<script src="people2.services.js"></script>
-		<script src="app17.js"></script>
+		<script src="app14.js"></script>
 	</body>
 </html>
