--- a/app/index16.html
+++ b/app/index16.html
@@ -9,11 +9,11 @@
 	<body ng-controller="MainController">
 		<div class="main-container container">
 			<div class="container">
-				<a href="index16.html">< Précédent</a>
-				<!-- <a href="index16.html">Suivant ></a> -->
+				<a href="index15.html">< Précédent</a>
+				<a href="index17.html">Suivant ></a>
 			</div>
 			<div class="container">
-				<h2>Exemple 17</h2>
+				<h2>Exemple 16</h2>
 				<div class="row">
 					<div class="emphasize col-md-7" ui-view="list"></div>
 					<div class="emphasize col-md-5" ui-view="details"></div>
@@ -28,6 +28,6 @@
 		<script src="person.js"></script>
 		<script src="people.js"></script>
 		<script src="people2.services.js"></script>
-		<script src="app17.js"></script>
+		<script src="app16.js"></script>
 	</body>
 </html>
