--- a/app/index20.html
+++ b/app/index20.html
@@ -9,11 +9,11 @@
 	<body ng-controller="MainController">
 		<div class="main-container container">
 			<div class="container">
-				<a href="index16.html">< Précédent</a>
-				<a href="index18.html">Suivant ></a>
+				<a href="index19.html">< Précédent</a>
+				<!-- <a href="index20.html">Suivant ></a> -->
 			</div>
 			<div class="container">
-				<h2>Exemple 17</h2>
+				<h2>Exemple 20</h2>
 				<div class="row">
 					<div class="emphasize col-md-7" ui-view="list"></div>
 					<div class="emphasize col-md-5" ui-view="details"></div>
@@ -25,9 +25,9 @@
 		<script src="angular.min.js"></script>
 		<script src="angular-ui-router.min.js"></script>
 		<script src="angular-resource.min.js"></script>
-		<script src="person.js"></script>
+		<script src="person20.js"></script>
 		<script src="people.js"></script>
 		<script src="people2.services.js"></script>
-		<script src="app17.js"></script>
+		<script src="app19.js"></script>
 	</body>
 </html>
