--- a/app/index20.html
+++ b/app/index20.html
@@ -10,7 +10,7 @@
 		<div class="main-container container">
 			<div class="container">
 				<a href="index19.html">< Précédent</a>
-				<!-- <a href="index20.html">Suivant ></a> -->
+				<a href="index21.html">Suivant ></a>
 			</div>
 			<div class="container">
 				<h2>Exemple 20</h2>
